--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+    /* ====== พื้นหลัง Gradient ไหล ====== */
     body {
       font-family: 'Poppins', sans-serif;
       display: flex;
@@ -14,29 +15,53 @@
       align-items: center;
       min-height: 100vh;
       padding: 2em;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #f1f1f1;
-      animation: bgFlow 15s ease infinite alternate;
+      margin: 0;
+      overflow: hidden; /* กันฟองอากาศเกินจอ */
+      background: linear-gradient(-45deg, #a8edea, #00c6fb, #009ffd, #00b4d8);
+      background-size: 400% 400%;
+      animation: oceanFlow 15s ease infinite;
+      color: #083d77;
     }
 
-    @keyframes bgFlow {
-      0%   { background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); }
-      50%  { background: linear-gradient(135deg, #141E30, #243B55, #2C5364); }
-      100% { background: linear-gradient(135deg, #1f1c2c, #2C3E50, #243B55); }
+    @keyframes oceanFlow {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* ====== Effect Bubble ====== */
+    .bubbles {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .bubble {
+      position: absolute;
+      bottom: -100px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 50%;
+      animation: rise 15s infinite ease-in;
+    }
+
+    @keyframes rise {
+      0% { transform: translateY(0) scale(1); opacity: 0.6; }
+      50% { opacity: 0.8; }
+      100% { transform: translateY(-120vh) scale(1.2); opacity: 0; }
     }
 
     h1 {
       font-size: 2.6em;
       margin-bottom: 1.5em;
       text-align: center;
-      color: #f5f5f5;
-      text-shadow: 0 0 20px rgba(255,215,0,0.6);
-      animation: fadeInDown 1.2s ease;
-    }
-
-    @keyframes fadeInDown {
-      from { opacity: 0; transform: translateY(-30px); }
-      to   { opacity: 1; transform: translateY(0); }
+      color: #003459;
+      text-shadow: 0 0 12px rgba(255,255,255,0.6);
+      z-index: 2;
     }
 
     .container {
@@ -45,64 +70,55 @@
       gap: 25px;
       width: 100%;
       margin-bottom: 2em;
+      z-index: 2;
     }
 
     .card {
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(255,215,0,0.6);
+      background: rgba(255,255,255,0.85);
+      border: 1px solid rgba(0,140,200,0.3);
       border-radius: 20px;
       padding: 2em;
       text-align: center;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
-      transition: all 0.4s ease;
-      animation: fadeInUp 1s ease;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      transition: all 0.3s ease;
+      backdrop-filter: blur(6px);
+      z-index: 2;
     }
     .card:hover {
-      transform: translateY(-8px) scale(1.03);
-      box-shadow: 0 15px 40px rgba(255,215,0,0.5);
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(30px); }
-      to   { opacity: 1; transform: translateY(0); }
+      transform: translateY(-6px);
+      box-shadow: 0 12px 28px rgba(0,0,0,0.25);
     }
 
     .label {
       font-weight: 600;
       font-size: 1.3em;
       margin-bottom: 0.5em;
-      color: #FFD700;
+      color: #0077b6;
     }
     .value {
       font-size: 3em;
       font-weight: 700;
-      color: #fff;
-      text-shadow: 0 0 12px rgba(255,255,255,0.3);
+      color: #001f3f;
     }
     .unit {
       font-size: 1.1em;
-      color: #ddd;
+      color: #444;
     }
-    #temperature-value { color: #FF6B81; }
-    #humidity-value { color: #33C4BC; }
+    #temperature-value { color: #e63946; }
+    #humidity-value { color: #0077b6; }
 
     .status-message {
-      background: rgba(255,255,255,0.07);
-      border: 1px solid rgba(192,192,192,0.5);
+      background: rgba(255,255,255,0.85);
+      border: 1px solid rgba(0,119,182,0.4);
       padding: 16px 24px;
       border-radius: 15px;
       margin-bottom: 2em;
       font-weight: 500;
       text-align: center;
-      color: #eee;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.3);
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0%   { box-shadow: 0 0 10px rgba(255,215,0,0.4); }
-      50%  { box-shadow: 0 0 25px rgba(255,215,0,0.7); }
-      100% { box-shadow: 0 0 10px rgba(255,215,0,0.4); }
+      color: #003459;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+      backdrop-filter: blur(6px);
+      z-index: 2;
     }
 
     table {
@@ -110,45 +126,48 @@
       border-collapse: collapse;
       border-radius: 12px;
       overflow: hidden;
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(255,215,0,0.4);
+      background: rgba(255,255,255,0.9);
+      border: 1px solid rgba(0,140,200,0.3);
       margin-bottom: 2em;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+      z-index: 2;
     }
     th, td {
       padding: 12px 15px;
       text-align: center;
-      color: #f1f1f1;
+      color: #083d77;
     }
     th {
-      background: rgba(255,215,0,0.2);
+      background: rgba(0,198,251,0.2);
       font-weight: 600;
     }
-    tr:nth-child(even) { background: rgba(255,255,255,0.05); }
-    tr:hover { background: rgba(255,215,0,0.15); transition: 0.3s; }
+    tr:nth-child(even) { background: rgba(0,198,251,0.08); }
+    tr:hover { background: rgba(0,198,251,0.18); transition: 0.3s; }
 
     #chart-container {
       width: 100%;
       padding: 25px;
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(255,215,0,0.4);
+      background: rgba(255,255,255,0.9);
+      border: 1px solid rgba(0,140,200,0.3);
       border-radius: 20px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.5);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
       margin-bottom: 2em;
-      animation: fadeInUp 1s ease;
+      backdrop-filter: blur(6px);
+      z-index: 2;
     }
 
     .footer {
       margin-top: 2em;
       padding: 15px 30px;
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(192,192,192,0.4);
+      background: rgba(255,255,255,0.85);
+      border: 1px solid rgba(0,140,200,0.3);
       border-radius: 12px;
       text-align: center;
       font-weight: 500;
-      color: #f5f5f5;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-      animation: fadeInUp 1s ease;
+      color: #003459;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+      backdrop-filter: blur(6px);
+      z-index: 2;
     }
 
     @media (min-width: 600px) {
@@ -158,6 +177,9 @@
   </style>
 </head>
 <body>
+  <!-- ฟองอากาศ -->
+  <div class="bubbles" id="bubbles"></div>
+
   <h1>Temperature & Humidity Dashboard</h1>
 
   <div class="container">
@@ -183,25 +205,21 @@
         <th>Humidity (%)</th>
       </tr>
     </thead>
-    <tbody id="data-table-body"></tbody>
+    <tbody id="data-table-body">
+    </tbody>
   </table>
 
   <div id="chart-container">
     <canvas id="dataChart"></canvas>
   </div>
 
-  <div class="footer">&copy; 2025 Smart IoT Dashboard</div>
+  <div class="footer">
+    &copy; 2025 Smart IoT Dashboard
+  </div>
 
   <script>
+    /* Chart.js */
     const ctx = document.getElementById('dataChart').getContext('2d');
-    const gradientTemp = ctx.createLinearGradient(0,0,0,300);
-    gradientTemp.addColorStop(0,'rgba(255,107,129,0.8)');
-    gradientTemp.addColorStop(1,'rgba(255,107,129,0.1)');
-
-    const gradientHum = ctx.createLinearGradient(0,0,0,300);
-    gradientHum.addColorStop(0,'rgba(51,196,188,0.8)');
-    gradientHum.addColorStop(1,'rgba(51,196,188,0.1)');
-
     const dataChart = new Chart(ctx, {
       type: 'line',
       data: {
@@ -209,38 +227,33 @@
         datasets: [
           {
             label: 'Temperature (°C)',
-            borderColor: '#FF6B81',
-            backgroundColor: gradientTemp,
+            borderColor: '#e63946',
+            backgroundColor: 'rgba(230,57,70,0.15)',
             data: [],
             fill: true,
-            tension: 0.4,
-            pointRadius: 4,
-            pointHoverRadius: 7,
-            pointBackgroundColor: '#FF6B81'
+            tension: 0.3
           },
           {
             label: 'Humidity (%)',
-            borderColor: '#33C4BC',
-            backgroundColor: gradientHum,
+            borderColor: '#0077b6',
+            backgroundColor: 'rgba(0,119,182,0.15)',
             data: [],
             fill: true,
-            tension: 0.4,
-            pointRadius: 4,
-            pointHoverRadius: 7,
-            pointBackgroundColor: '#33C4BC'
+            tension: 0.3
           }
         ]
       },
       options: {
         responsive: true,
-        plugins: { legend: { labels: { color: '#f5f5f5' } } },
+        plugins: { legend: { labels: { color: '#003459' } } },
         scales: {
-          x: { ticks: { color: '#ddd' } },
-          y: { ticks: { color: '#ddd' } }
+          x: { ticks: { color: '#003459' } },
+          y: { ticks: { color: '#003459' } }
         }
       }
     });
 
+    /* อัปเดตข้อมูลจำลอง */
     function updateData() {
       const now = new Date().toLocaleTimeString();
       const temp = (20 + Math.random() * 10).toFixed(1);
@@ -267,6 +280,21 @@
     }
 
     setInterval(updateData, 3000);
+
+    /* ===== สร้างฟองอากาศแบบสุ่ม ===== */
+    const bubblesContainer = document.getElementById('bubbles');
+    function createBubble() {
+      const bubble = document.createElement('div');
+      bubble.classList.add('bubble');
+      const size = Math.random() * 40 + 10; // 10-50px
+      bubble.style.width = `${size}px`;
+      bubble.style.height = `${size}px`;
+      bubble.style.left = `${Math.random() * 100}%`;
+      bubble.style.animationDuration = `${10 + Math.random() * 10}s`;
+      bubblesContainer.appendChild(bubble);
+      setTimeout(() => bubble.remove(), 20000);
+    }
+    setInterval(createBubble, 800);
   </script>
 </body>
 </html>
