--- a/index.html
+++ b/index.html
@@ -15,113 +15,122 @@ body {
     align-items: center;
     min-height: 100vh;
     padding: 1em;
-    /* Gradient พาสเทลชมพู → ม่วง → ฟ้า */
-    background: linear-gradient(135deg, #FFB6C1, #CBA3D6, #A8D5FA);
-    background-size: 400% 400%;
-    animation: gradientShift 20s ease infinite;
-    color: #fff;
+    color: #333;
+    transition: background 2s ease;
 }
 
-/* Gradient Animation */
-@keyframes gradientShift {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+/* Fade-in Animation */
+@keyframes fadeInUp {
+    from { opacity:0; transform: translateY(20px); }
+    to { opacity:1; transform: translateY(0); }
 }
 
 /* Header */
 h1 {
-    font-size: 2em;
+    font-size: 2.4em;
     margin-bottom: 1em;
     text-align: center;
-    text-shadow: 1px 1px 10px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 6px rgba(0,0,0,0.15);
+    animation: fadeInUp 0.6s ease forwards;
+    color: #444;
 }
 
 /* Cards */
 .container {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
     width: 100%;
     margin-bottom: 1.5em;
 }
 .card {
-    background: rgba(255,255,255,0.25);
-    backdrop-filter: blur(15px);
-    border-radius: 25px;
-    padding: 1.5em;
+    position: relative;
+    background: linear-gradient(145deg, #FFD1DC, #FFB6C1);
+    border-radius: 30px;
+    padding: 2em;
     text-align: center;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 8px 25px rgba(255,182,193,0.4);
+    border: 4px dashed rgba(255,105,180,0.6);
+    color: #333;
+    transition: all 0.3s ease;
+    animation: fadeInUp 0.6s ease forwards;
 }
-.card:hover { transform: scale(1.05); box-shadow: 0 12px 25px rgba(0,0,0,0.25); }
+.card:hover {
+    transform: translateY(-5px) rotate(-1deg);
+    box-shadow: 0 12px 35px rgba(255,105,180,0.5);
+}
 
-.label { font-weight: 600; font-size: 1.1em; margin-bottom: 0.3em; color: #fff; }
-.value { font-size: 2.5em; font-weight: 700; }
-.unit { font-size: 1.1em; color: rgba(255,255,255,0.8); }
-#temperature-value { color: #FF9A8B; }
-#humidity-value { color: #80D0C7; }
+.label { font-weight: 600; font-size: 1.3em; margin-bottom: 0.5em; }
+.value { font-size: 3.2em; font-weight: 700; }
+.unit { font-size: 1.1em; color: #555; }
+#temperature-value { color: #FF6B81; }
+#humidity-value { color: #33C4BC; }
 
 /* Status message */
 .status-message {
-    background: rgba(255,255,255,0.2);
-    padding: 10px 15px;
-    border-radius: 20px;
-    backdrop-filter: blur(15px);
+    background: linear-gradient(145deg, #FFF1C8, #FFE0A8);
+    padding: 14px 22px;
+    border-radius: 25px;
     margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
+    border: 3px dashed rgba(255,180,50,0.5);
+    animation: fadeInUp 0.6s ease forwards;
+    color: #333;
 }
 
 /* Table */
 table {
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 0;
     border-radius: 20px;
     overflow: hidden;
-    background: rgba(255,255,255,0.2);
-    backdrop-filter: blur(15px);
-    box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+    background: linear-gradient(135deg, #C8F7D2, #A8EFC4);
+    box-shadow: 0 6px 20px rgba(50,200,180,0.25);
     margin-bottom: 1.5em;
+    border: 4px double rgba(50,200,180,0.6);
 }
-th, td { padding: 10px 12px; text-align: center; }
-th { background: rgba(255,255,255,0.3); font-weight: 600; color: #fff; }
-tr:hover { background: rgba(255,255,255,0.15); transition: 0.3s; }
+th, td { padding: 12px 15px; text-align: center; color: #333; }
+th { background: rgba(255,255,255,0.2); font-weight: 600; }
+tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
 
-/* Chart */
+/* Chart container */
 #chart-container {
     width: 100%;
-    padding: 15px;
-    background: rgba(255,255,255,0.2);
-    border-radius: 25px;
-    backdrop-filter: blur(15px);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    padding: 25px;
+    background: linear-gradient(145deg, #D0F0FD, #A8E6FF);
+    border-radius: 30px;
+    box-shadow: 0 10px 30px rgba(168,230,255,0.3);
     margin-bottom: 2em;
+    border: 4px dashed rgba(51,196,188,0.6);
+    animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Footer */
 .footer {
     margin-top: 2em;
-    padding: 10px 20px;
-    background: rgba(255,255,255,0.2);
-    backdrop-filter: blur(12px);
-    border-radius: 15px;
+    padding: 15px 30px;
+    background: linear-gradient(135deg, #FFF1C8, #FFE0A8);
+    border-radius: 20px;
     text-align: center;
     font-weight: 500;
-    color: #fff;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    color: #333;
+    box-shadow: 0 8px 25px rgba(255,200,100,0.25);
+    border: 3px dashed rgba(255,180,50,0.5);
+    animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Responsive */
 @media (min-width: 600px) {
     .container { flex-direction: row; justify-content: center; }
-    .card { flex: 1 1 200px; max-width: 220px; }
+    .card { flex: 1 1 220px; max-width: 250px; }
 }
 </style>
 </head>
 <body>
 
-<h1>Pastel Weather Dashboard</h1>
+<h1>☀️💧 Weather Dashboard</h1>
 
 <div class="container">
     <div class="card">
@@ -142,9 +151,9 @@ tr:hover { background: rgba(255,255,255,0.15); transition: 0.3s; }
 <table id="history-table">
     <thead>
         <tr>
-            <th>Time</th>
-            <th>Temp (°C)</th>
-            <th>Humidity (%)</th>
+            <th>Time ⏰</th>
+            <th>Temp 🌡️</th>
+            <th>Humidity 💧</th>
         </tr>
     </thead>
     <tbody></tbody>
@@ -154,21 +163,22 @@ tr:hover { background: rgba(255,255,255,0.15); transition: 0.3s; }
     <canvas id="weatherChart"></canvas>
 </div>
 
-<!-- Footer -->
 <div class="footer">
-    <p>Create By : 66030178 & 66030196</p>
+    <p>Created By : 66030178 & 66030196</p>
 </div>
 
 <script>
 const BACKEND_BASE = "https://dht-69wz.onrender.com";
 const MAX_HISTORY = 20;
 
-// Chart.js setup
 const ctx = document.getElementById('weatherChart').getContext('2d');
-const chartData = { labels: [], datasets: [
-    { label: 'Temperature (°C)', data: [], borderColor:'#FF9A8B', backgroundColor:'rgba(255,154,139,0.3)', tension:0.4 },
-    { label: 'Humidity (%)', data: [], borderColor:'#80D0C7', backgroundColor:'rgba(128,208,199,0.3)', tension:0.4 }
-]};
+const chartData = { 
+    labels: [], 
+    datasets: [
+        { label: 'Temperature (°C)', data: [], borderColor:'#FF6B81', backgroundColor:'rgba(255,107,129,0.25)', tension:0.4 },
+        { label: 'Humidity (%)', data: [], borderColor:'#33C4BC', backgroundColor:'rgba(51,196,188,0.25)', tension:0.4 }
+    ]
+};
 const weatherChart = new Chart(ctx,{
     type:'line',
     data: chartData,
@@ -179,7 +189,6 @@ const weatherChart = new Chart(ctx,{
     }
 });
 
-// Load history
 async function loadHistory(){
     try{
         const res = await fetch(`${BACKEND_BASE}/history?limit=${MAX_HISTORY}`, {cache:"no-store"});
@@ -211,7 +220,6 @@ async function loadHistory(){
     }
 }
 
-// Fetch latest data every 5s
 async function fetchData(){
     try{
         const res = await fetch(`${BACKEND_BASE}/data`, {cache:"no-store"});
@@ -219,7 +227,6 @@ async function fetchData(){
         if(data.temperature!==null) document.getElementById('temperature-value').textContent = Number(data.temperature).toFixed(1);
         if(data.humidity!==null) document.getElementById('humidity-value').textContent = Number(data.humidity).toFixed(0);
 
-        // Update table
         const tbody = document.querySelector("#history-table tbody");
         const newRow = document.createElement("tr");
         newRow.innerHTML = `<td>${new Date().toLocaleTimeString()}</td>
@@ -228,7 +235,6 @@ async function fetchData(){
         tbody.insertBefore(newRow, tbody.firstChild);
         if(tbody.rows.length > MAX_HISTORY) tbody.deleteRow(tbody.rows.length - 1);
 
-        // Update chart
         const time = new Date().toLocaleTimeString();
         chartData.labels.push(time);
         chartData.datasets[0].data.push(Number(data.temperature).toFixed(1));
@@ -245,8 +251,20 @@ async function fetchData(){
     }
 }
 
+function updateBackgroundByTime(){
+    const hour = new Date().getHours();
+    let bg;
+    if(hour>=6 && hour<12) bg = 'linear-gradient(135deg, #FFFAE3, #FFF5C2)';
+    else if(hour>=12 && hour<18) bg = 'linear-gradient(135deg, #D0F0FD, #A8E6FF)';
+    else if(hour>=18 && hour<21) bg = 'linear-gradient(135deg, #FFD1DC, #FFB3C1)';
+    else bg = 'linear-gradient(135deg, #C8F7D2, #A8EFC4)';
+    document.body.style.background = bg;
+}
+
 loadHistory();
 setInterval(fetchData, 5000);
+updateBackgroundByTime();
+setInterval(updateBackgroundByTime, 60000);
 </script>
 
 </body>
